chi/org.eclipse.escet.chi.tests/tests/spec/global/func-return.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

func chan? int F1(chan? int a): return a; end
func chan? int F2(chan! int a): return a; end
func chan? int F3(chan!? int a): return a; end
func chan! int F4(chan? int a): return a; end
func chan! int F5(chan! int a): return a; end
func chan! int F6(chan!? int a): return a; end
func chan!? int F7(chan? int a): return a; end
func chan!? int F8(chan! int a): return a; end
func chan!? int F9(chan!? int a): return a; end
